Fix select component long text issues
- Add padding-right to prevent icon overlap with long text
- Add text-overflow ellipsis for long input values
- Prevent text wrapping with white-space nowrap and overflow hidden

--- a/packages/css/src/components/select/index.scss
+++ b/packages/css/src/components/select/index.scss
@@ -16,6 +16,10 @@
 
     align-items: center;
     width: 100%;
+    padding-right: calc(var(--ab-semantic-spacing-2) * 2 + 16px);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
   &-icon {
